offline screen setup

--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -23,6 +23,7 @@
       "react-native": "0.66.1",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-modalize": "^2.0.10",
+      "react-native-offline": "^6.0.0",
       "react-native-portalize": "^1.0.7",
       "react-native-safe-area-context": "^3.3.2",
       "react-native-screens": "^3.9.0",
