--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -16,6 +16,7 @@
    },
    "dependencies": {
       "@react-native-async-storage/async-storage": "^1.15.9",
+      "@react-native-community/netinfo": "^6.0.4",
       "axios": "^0.24.0",
       "lodash": "^4.17.21",
       "prop-types": "^15.7.2",
