--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -18,9 +18,11 @@
       "@react-native-async-storage/async-storage": "^1.15.9",
       "@react-native-community/netinfo": "^6.0.4",
       "axios": "^0.24.0",
+      "i18next": "^21.3.3",
       "lodash": "^4.17.21",
       "prop-types": "^15.7.2",
       "react": "17.0.2",
+      "react-i18next": "^11.13.0",
       "react-native": "0.66.1",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-modalize": "^2.0.10",
