--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -17,6 +17,9 @@
    "dependencies": {
       "@react-native-async-storage/async-storage": "^1.15.9",
       "@react-native-community/netinfo": "^6.0.4",
+      "@react-navigation/bottom-tabs": "^6.0.9",
+      "@react-navigation/native": "^6.0.6",
+      "@react-navigation/stack": "^6.0.11",
       "axios": "^0.24.0",
       "i18next": "^21.3.3",
       "lodash": "^4.17.21",
