--- a/RNProject/packages/rn-kit/package.json
+++ b/RNProject/packages/rn-kit/package.json
@@ -13,8 +13,8 @@
       "@gorhom/bottom-sheet": "^3.6.4",
       "lodash": "^4.17.21",
       "prop-types": "^15.7.2",
-      "react": "17.0.1",
-      "react-native": "^0.64.0",
+      "react": "17.0.2",
+      "react-native": "0.66.1",
       "react-native-easy-grid": "^0.2.2",
       "react-native-svg": "^12.1.1",
       "react-native-svg-icon": "^0.10.0"
