--- a/RNProject/app.json
+++ b/RNProject/app.json
@@ -1,4 +1,11 @@
 {
-  "name": "RNProject",
-  "displayName": "RNProject"
+   "name": "RNProject",
+   "displayName": "RNProject",
+   "package": "com.RNProject",
+   "android": {
+      "versionCode": ""
+   },
+   "ios": {
+      "bundleId": ""
+   }
 }
