--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -22,12 +22,14 @@
       "@react-navigation/native": "^6.0.6",
       "@react-navigation/stack": "^6.0.11",
       "axios": "^0.24.0",
+      "babel-plugin-module-resolver": "^4.1.0",
+      "formik": "^2.2.9",
       "i18next": "^21.3.3",
       "lodash": "^4.17.21",
       "prop-types": "^15.7.2",
-      "react": "17.0.2",
+      "react": "^17.0.2",
       "react-i18next": "^11.13.0",
-      "react-native": "0.66.1",
+      "react-native": "^0.66.3",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-modalize": "^2.0.10",
       "react-native-offline": "^6.0.0",
@@ -41,7 +43,6 @@
       "redux": "^4.1.2",
       "redux-persist": "^6.0.0",
       "redux-thunk": "^2.4.0",
-      "rn-kit": "file:packages/rn-kit",
       "styled-components": "^5.3.3"
    },
    "devDependencies": {
@@ -56,8 +57,5 @@
    },
    "jest": {
       "preset": "react-native"
-   },
-   "workspaces": [
-      "./packages/*"
-   ]
+   }
 }
