Splashscreen created for android

--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -10,6 +10,7 @@
       "lint": "eslint .",
       "podinstall": "cd ios && pod install && cd ..",
       "format": "prettier --write \"./src/**/*.{js,md,yml}\"",
+      "create:logo": "react-native generate-bootsplash './assets/logo/logo@1080x1080.png'",
       "build:android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res && react-native run-android",
       "bundle:ios": "react-native bundle --dev false --entry-file index.js --bundle-output ios/main.jsbundle --platform ios --assets-dest ios",
       "clean:npm": "watchman watch-del-all && rm -rf package-lock.json && rm -rf node_modules && rm -rf $TMPDIR/metro-* && rm -rf $TMPDIR/haste-map-* && npm install --force && say Project has been cleaned successfully",
@@ -30,6 +31,7 @@
       "react": "^17.0.2",
       "react-i18next": "^11.13.0",
       "react-native": "^0.66.3",
+      "react-native-bootsplash": "^3.2.6",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-modalize": "^2.0.10",
       "react-native-offline": "^6.0.0",
