Splashscreen with offlinescreen support

--- a/RNProject/app.json
+++ b/RNProject/app.json
@@ -7,5 +7,12 @@
    },
    "ios": {
       "bundleId": ""
+   },
+   "developer": {
+      "name": "",
+      "url": ""
+   },
+   "expo": {
+
    }
 }
