--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -2,6 +2,13 @@
    "name": "rnproject",
    "version": "0.0.1",
    "private": true,
+   "authors": [
+      {
+         "email": "akkyjumbade@gmail.com",
+         "name": "Akshay Jumbade",
+         "url": "https://github.com/akkyjumbade"
+      }
+   ],
    "scripts": {
       "android": "react-native run-android",
       "ios": "react-native run-ios",
