--- a/RNProject/jsconfig.json
+++ b/RNProject/jsconfig.json
@@ -8,12 +8,15 @@
          "@assets/*": [
             "./assets/*"
          ],
+         "@modules/*": [
+            "./modules/*"
+         ],
          "@ui/*": [
             "./packages/rn-kit/src/*"
          ],
          "@rn-kit/*": [
             "./packages/rn-kit/src/*"
-         ],
+         ]
       }
    },
    "exclude": [
