--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -30,7 +30,6 @@
       "@react-navigation/native": "^6.0.6",
       "@react-navigation/stack": "^6.0.11",
       "axios": "^0.24.0",
-      "babel-plugin-module-resolver": "^4.1.0",
       "formik": "^2.2.9",
       "i18next": "^21.3.3",
       "lodash": "^4.17.21",
@@ -39,6 +38,7 @@
       "react-i18next": "^11.13.0",
       "react-native": "^0.66.3",
       "react-native-bootsplash": "^3.2.6",
+      "react-native-document-picker": "^7.1.3",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-modalize": "^2.0.10",
       "react-native-offline": "^6.0.0",
@@ -46,6 +46,7 @@
       "react-native-safe-area-context": "^3.3.2",
       "react-native-screens": "^3.9.0",
       "react-native-storage": "^1.0.1",
+      "react-native-svg": "^12.1.1",
       "react-native-vector-icons": "^9.0.0",
       "react-query": "^3.31.0",
       "react-redux": "^7.2.6",
@@ -57,6 +58,7 @@
    "devDependencies": {
       "@babel/core": "^7.12.9",
       "@babel/runtime": "^7.12.5",
+      "babel-plugin-module-resolver": "^4.1.0",
       "@react-native-community/eslint-config": "^2.0.0",
       "babel-jest": "^26.6.3",
       "eslint": "7.14.0",
