--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -33,6 +33,7 @@
       "formik": "^2.2.9",
       "i18next": "^21.3.3",
       "lodash": "^4.17.21",
+      "native-base": "^3.2.2",
       "prop-types": "^15.7.2",
       "react": "^17.0.2",
       "react-i18next": "^11.13.0",
@@ -58,9 +59,9 @@
    "devDependencies": {
       "@babel/core": "^7.12.9",
       "@babel/runtime": "^7.12.5",
-      "babel-plugin-module-resolver": "^4.1.0",
       "@react-native-community/eslint-config": "^2.0.0",
       "babel-jest": "^26.6.3",
+      "babel-plugin-module-resolver": "^4.1.0",
       "eslint": "7.14.0",
       "jest": "^26.6.3",
       "metro-react-native-babel-preset": "^0.66.2",
