--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -38,11 +38,13 @@
       "react": "^17.0.2",
       "react-i18next": "^11.13.0",
       "react-native": "^0.66.3",
+      "react-native-app-intro-slider": "^4.0.4",
       "react-native-bootsplash": "^3.2.6",
       "react-native-document-picker": "^7.1.3",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-modalize": "^2.0.10",
       "react-native-offline": "^6.0.0",
+      "react-native-pager-view": "^5.4.9",
       "react-native-portalize": "^1.0.7",
       "react-native-safe-area-context": "^3.3.2",
       "react-native-screens": "^3.9.0",
@@ -54,7 +56,8 @@
       "redux": "^4.1.2",
       "redux-persist": "^6.0.0",
       "redux-thunk": "^2.4.0",
-      "styled-components": "^5.3.3"
+      "styled-components": "^5.3.3",
+      "yup": "^0.32.11"
    },
    "devDependencies": {
       "@babel/core": "^7.12.9",
