--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -25,7 +25,7 @@
    },
    "dependencies": {
       "@react-native-async-storage/async-storage": "^1.15.9",
-      "@react-native-community/netinfo": "^6.0.4",
+      "@react-native-community/netinfo": "^7.1.7",
       "@react-navigation/bottom-tabs": "^6.0.9",
       "@react-navigation/native": "^6.0.6",
       "@react-navigation/stack": "^6.0.11",
@@ -37,17 +37,17 @@
       "prop-types": "^15.7.2",
       "react": "^17.0.2",
       "react-i18next": "^11.13.0",
-      "react-native": "^0.66.3",
-      "react-native-app-intro-slider": "^4.0.4",
-      "react-native-bootsplash": "^3.2.6",
+      "react-native": "^0.66.4",
+      "react-native-bootsplash": "^4.0.2",
       "react-native-document-picker": "^7.1.3",
-      "react-native-gesture-handler": "^1.10.3",
+      "react-native-gesture-handler": "^2.1.0",
       "react-native-modalize": "^2.0.10",
       "react-native-offline": "^6.0.0",
       "react-native-pager-view": "^5.4.9",
       "react-native-portalize": "^1.0.7",
+      "react-native-reanimated": "^2.3.1",
       "react-native-safe-area-context": "^3.3.2",
-      "react-native-screens": "^3.9.0",
+      "react-native-screens": "^3.10.1",
       "react-native-storage": "^1.0.1",
       "react-native-svg": "^12.1.1",
       "react-native-vector-icons": "^9.0.0",
