--- a/.github/workflows/android-apk.yml
+++ b/.github/workflows/android-apk.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Grant execute permission for gradlew
       run: cd RNProject/android && chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build
+      run: cd RNProject/android && ./gradlew build
