--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -64,6 +64,7 @@
    "devDependencies": {
       "@babel/core": "^7.12.9",
       "@babel/runtime": "^7.12.5",
+      "@react-native-community/cli-platform-android": "^6.3.0",
       "@react-native-community/eslint-config": "^2.0.0",
       "babel-jest": "^26.6.3",
       "babel-plugin-module-resolver": "^4.1.0",
