--- a/.github/workflows/react-native-build-apk.yml
+++ b/.github/workflows/react-native-build-apk.yml
@@ -11,8 +11,22 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
     steps:
     - uses: actions/checkout@v2
+    - run: cd RNProject
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+    - run: npm ci --if-present
+    - run: npm run build:android --if-present
+    #- run: npm test
     
     - name: React Native Android Build APK
       # You may pin to the exact commit or the version.
