--- a/.github/workflows/react-native-build-apk.yml
+++ b/.github/workflows/react-native-build-apk.yml
@@ -17,8 +17,10 @@ jobs:
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
     - run: cd RNProject
+    
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
