--- a/.github/workflows/android-apk.yml
+++ b/.github/workflows/android-apk.yml
@@ -13,6 +13,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'npm'
+      - run: npm ci --if-present
+      - run: npm run build:android --if-present
+      #- run: npm test
+
     - name: set up JDK 11
       uses: actions/setup-java@v2
       with:
