--- a/.github/workflows/react-native-build-apk.yml
+++ b/.github/workflows/react-native-build-apk.yml
@@ -7,30 +7,26 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  install-and-test:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - run: cd RNProject
-    
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci --if-present
-    - run: npm run build:android --if-present
-    #- run: npm test
-    
-    - name: React Native Android Build APK
-      # You may pin to the exact commit or the version.
-      # uses: realabbas/Github-Actions-React-Native@047b6256928e9f54ec66393c95817b702c4a0ee2
-    - uses: realabbas/Github-Actions-React-Native@v1.1.2
+      - uses: actions/checkout@v2
+      - name: Install npm dependencies
+        run: |
+          npm install
+  build-android:
+    needs: install-and-test
+    runs-on: ubuntu-latest
+    steps: 
+      - uses: actions/checkout@v2
+      - name: Install npm dependencies
+        run: |
+          npm install
+      - name: Build Android Release
+        run: |
+          cd android && ./gradlew assembleRelease
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: app-release.apk
+          path: android/app/build/outputs/apk/release/
