--- a/.github/workflows/react-native-build-apk.yml
+++ b/.github/workflows/react-native-build-apk.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install npm dependencies
         run: |
-          npm install
+          cd RNProject && npm install
   build-android:
     needs: install-and-test
     runs-on: ubuntu-latest
@@ -21,10 +21,10 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install npm dependencies
         run: |
-          npm install
+          cd RNProject && npm install
       - name: Build Android Release
         run: |
-          cd android && ./gradlew assembleRelease
+          cd RNProject/android && ./gradlew assembleRelease
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
