--- a/RNProject/ios/Podfile
+++ b/RNProject/ios/Podfile
@@ -12,6 +12,8 @@ target 'RNProject' do
     :hermes_enabled => false
   )
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'RNProjectTests' do
     inherit! :complete
     # Pods for testing
