--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -15,6 +15,7 @@
       "start": "react-native start",
       "test": "jest",
       "lint": "eslint .",
+      "devtools": "react-devtools",
       "podinstall": "cd ios && pod install && cd ..",
       "format": "prettier --write \"./src/**/*.{js,md,yml}\"",
       "create:logo": "react-native generate-bootsplash './assets/logo/logo@1080x1080.png'",
@@ -25,11 +26,13 @@
    },
    "dependencies": {
       "@react-native-async-storage/async-storage": "^1.15.9",
+      "@react-native-community/clipboard": "^1.5.1",
       "@react-native-community/netinfo": "^7.1.7",
       "@react-native-community/push-notification-ios": "^1.10.1",
       "@react-navigation/bottom-tabs": "^6.0.9",
       "@react-navigation/native": "^6.0.6",
       "@react-navigation/stack": "^6.0.11",
+      "@twotalltotems/react-native-otp-input": "^1.3.11",
       "axios": "^0.24.0",
       "formik": "^2.2.9",
       "i18next": "^21.3.3",
@@ -42,7 +45,8 @@
       "react-native-bootsplash": "^4.0.2",
       "react-native-document-picker": "^7.1.3",
       "react-native-gesture-handler": "^2.1.0",
-      "react-native-modalize": "^2.0.10",
+      "react-native-htmlview": "^0.16.0",
+      "react-native-modalize": "^2.0.13",
       "react-native-offline": "^6.0.0",
       "react-native-pager-view": "^5.4.9",
       "react-native-portalize": "^1.0.7",
@@ -53,6 +57,7 @@
       "react-native-storage": "^1.0.1",
       "react-native-svg": "^12.1.1",
       "react-native-vector-icons": "^9.0.0",
+      "react-native-webview": "^11.15.0",
       "react-query": "^3.31.0",
       "react-redux": "^7.2.6",
       "redux": "^4.1.2",
@@ -71,7 +76,8 @@
       "eslint": "7.14.0",
       "jest": "^26.6.3",
       "metro-react-native-babel-preset": "^0.66.2",
-      "react-test-renderer": "17.0.2"
+      "react-test-renderer": "17.0.2",
+      "redux-devtools-extension": "^2.13.9"
    },
    "jest": {
       "preset": "react-native"
