--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -40,6 +40,7 @@
       "native-base": "^3.2.2",
       "prop-types": "^15.7.2",
       "react": "^17.0.2",
+      "react-content-loader": "^6.1.0",
       "react-i18next": "^11.13.0",
       "react-native": "^0.66.4",
       "react-native-bootsplash": "^4.0.2",
