--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -47,6 +47,7 @@
       "react-native-document-picker": "^7.1.3",
       "react-native-gesture-handler": "^2.1.0",
       "react-native-htmlview": "^0.16.0",
+      "react-native-localize": "^2.1.7",
       "react-native-modalize": "^2.0.13",
       "react-native-offline": "^6.0.0",
       "react-native-pager-view": "^5.4.9",
