lottie added for animations

--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -37,6 +37,8 @@
       "formik": "^2.2.9",
       "i18next": "^21.3.3",
       "lodash": "^4.17.21",
+      "lottie-ios": "^3.2.3",
+      "lottie-react-native": "^5.0.1",
       "native-base": "^3.2.2",
       "prop-types": "^15.7.2",
       "react": "^17.0.2",
