--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -46,6 +46,7 @@
       "react-i18next": "^11.13.0",
       "react-native": "^0.66.4",
       "react-native-bootsplash": "^4.0.2",
+      "react-native-device-info": "^8.4.8",
       "react-native-document-picker": "^7.1.3",
       "react-native-gesture-handler": "^2.1.0",
       "react-native-htmlview": "^0.16.0",
@@ -58,6 +59,7 @@
       "react-native-reanimated": "^2.3.1",
       "react-native-safe-area-context": "^3.3.2",
       "react-native-screens": "^3.10.1",
+      "react-native-share": "^7.3.2",
       "react-native-storage": "^1.0.1",
       "react-native-svg": "^12.1.1",
       "react-native-vector-icons": "^9.0.0",
