--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -32,6 +32,7 @@
       "@react-navigation/bottom-tabs": "^6.0.9",
       "@react-navigation/native": "^6.0.6",
       "@react-navigation/stack": "^6.0.11",
+      "@sentry/react-native": "^3.2.10",
       "@twotalltotems/react-native-otp-input": "^1.3.11",
       "axios": "^0.24.0",
       "formik": "^2.2.9",
