--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -53,6 +53,7 @@
       "react-native-htmlview": "^0.16.0",
       "react-native-localize": "^2.1.7",
       "react-native-modalize": "^2.0.13",
+      "react-native-modern-datepicker": "^1.0.0-beta.91",
       "react-native-offline": "^6.0.0",
       "react-native-pager-view": "^5.4.9",
       "react-native-portalize": "^1.0.7",
