--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -55,6 +55,7 @@
       "react-native-modern-datepicker": "^1.0.0-beta.91",
       "react-native-offline": "^6.0.0",
       "react-native-pager-view": "^5.4.9",
+      "react-native-permissions": "^3.2.0",
       "react-native-portalize": "^1.0.7",
       "react-native-push-notification": "^8.1.1",
       "react-native-reanimated": "^2.3.1",
