--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "lodash": "^4.17.21",
       "react-native-gesture-handler": "^1.10.3",
       "react-native-modalize": "^2.0.10",
+      "react-native-permissions": "^3.2.0",
       "react-native-portalize": "^1.0.7",
       "styled-components": "^5.3.3"
    }
