--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -48,6 +48,7 @@
       "react-native": "^0.66.4",
       "react-native-bootsplash": "^4.0.2",
       "react-native-document-picker": "^7.1.3",
+      "react-native-easy-grid": "^0.2.2",
       "react-native-gesture-handler": "^2.1.0",
       "react-native-htmlview": "^0.16.0",
       "react-native-localize": "^2.1.7",
