--- a/RNProject/android/build.gradle
+++ b/RNProject/android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         compileSdkVersion = 31
         targetSdkVersion = 31
         ndkVersion = "21.4.7075529"
+        kotlinVersion = "1.5.20"
 
         googlePlayServicesVersion = "+" // default: "+"
          firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
