--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -25,24 +25,32 @@
    },
    "dependencies": {
       "@react-native-async-storage/async-storage": "^1.15.9",
+      "@react-native-community/clipboard": "^1.5.1",
       "@react-native-community/netinfo": "^6.0.4",
       "@react-navigation/bottom-tabs": "^6.0.9",
       "@react-navigation/native": "^6.0.6",
       "@react-navigation/stack": "^6.0.11",
+      "@sentry/react-native": "^3.2.10",
+      "@twotalltotems/react-native-otp-input": "^1.3.11",
       "axios": "^0.24.0",
       "formik": "^2.2.9",
       "i18next": "^21.3.3",
       "lodash": "^4.17.21",
+      "lottie-ios": "^3.2.3",
+      "lottie-react-native": "^5.0.1",
       "native-base": "^3.2.2",
       "prop-types": "^15.7.2",
       "react": "^17.0.2",
+      "react-content-loader": "^6.1.0",
       "react-i18next": "^11.13.0",
       "react-native": "^0.66.3",
       "react-native-app-intro-slider": "^4.0.4",
       "react-native-bootsplash": "^3.2.6",
       "react-native-document-picker": "^7.1.3",
       "react-native-gesture-handler": "^1.10.3",
+      "react-native-localize": "^2.1.7",
       "react-native-modalize": "^2.0.10",
+      "react-native-modern-datepicker": "^1.0.0-beta.91",
       "react-native-offline": "^6.0.0",
       "react-native-pager-view": "^5.4.9",
       "react-native-portalize": "^1.0.7",
@@ -51,6 +59,7 @@
       "react-native-storage": "^1.0.1",
       "react-native-svg": "^12.1.1",
       "react-native-vector-icons": "^9.0.0",
+      "react-native-webview": "^11.15.1",
       "react-query": "^3.31.0",
       "react-redux": "^7.2.6",
       "redux": "^4.1.2",
@@ -68,7 +77,8 @@
       "eslint": "7.14.0",
       "jest": "^26.6.3",
       "metro-react-native-babel-preset": "^0.66.2",
-      "react-test-renderer": "17.0.2"
+      "react-test-renderer": "17.0.2",
+      "redux-devtools-extension": "^2.13.9"
    },
    "jest": {
       "preset": "react-native"
