--- a/RNProject/android/build.gradle
+++ b/RNProject/android/build.gradle
@@ -7,6 +7,9 @@ buildscript {
         compileSdkVersion = 30
         targetSdkVersion = 30
         ndkVersion = "21.4.7075529"
+
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
     }
     repositories {
         google()
@@ -16,6 +19,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:4.2.2")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath('com.google.gms:google-services:4.3.3')
     }
 }
 
