--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -60,6 +60,7 @@
       "react-native-screens": "^3.9.0",
       "react-native-storage": "^1.0.1",
       "react-native-svg": "^12.1.1",
+      "react-native-swipe-list-view": "^3.2.9",
       "react-native-vector-icons": "^9.0.0",
       "react-native-webview": "^11.15.1",
       "react-query": "^3.31.0",
