--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -51,7 +51,7 @@
       "react-native-gesture-handler": "1.10.*",
       "react-native-localize": "2.1.*",
       "react-native-modalize": "2.0.*",
-      "react-native-modern-datepicker": "1.0.0-beta.*",
+      "react-native-modern-datepicker": "^1.0.0-beta.91",
       "react-native-offline": "6.0.*",
       "react-native-pager-view": "5.4.*",
       "react-native-portalize": "1.0.*",
@@ -72,16 +72,16 @@
       "yup": "0.32.*"
    },
    "devDependencies": {
-      "@babel/core": "7.12.*",
-      "@babel/runtime": "7.12.*",
-      "@react-native-community/eslint-config": "2.0.*",
-      "babel-jest": "26.6.*",
-      "babel-plugin-module-resolver": "4.1.*",
-      "eslint": "7.14.*",
-      "jest": "26.6.*",
-      "metro-react-native-babel-preset": "0.66.*",
-      "react-test-renderer": "17.0.*",
-      "redux-devtools-extension": "2.13.*"
+      "@babel/core": "^7.12.9",
+      "@babel/runtime": "^7.12.5",
+      "@react-native-community/eslint-config": "^2.0.0",
+      "babel-jest": "^26.6.3",
+      "babel-plugin-module-resolver": "^4.1.0",
+      "eslint": "7.14.0",
+      "jest": "^26.6.3",
+      "metro-react-native-babel-preset": "^0.66.2",
+      "react-test-renderer": "17.0.2",
+      "redux-devtools-extension": "^2.13.9"
    },
    "jest": {
       "preset": "react-native"
