--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -49,6 +49,7 @@
       "react-native-bootsplash": "3.2.*",
       "react-native-document-picker": "7.1.*",
       "react-native-gesture-handler": "1.10.*",
+      "react-native-keychain": "^8.0.0",
       "react-native-localize": "2.1.*",
       "react-native-modalize": "2.0.*",
       "react-native-modern-datepicker": "^1.0.0-beta.91",
@@ -61,6 +62,7 @@
       "react-native-storage": "1.0.*",
       "react-native-svg": "12.1.*",
       "react-native-swipe-list-view": "3.2.*",
+      "react-native-touch-id": "^4.4.1",
       "react-native-vector-icons": "9.0.*",
       "react-native-webview": "11.15.*",
       "react-query": "3.31.*",
