--- a/RNProject/android/app/src/main/AndroidManifest.xml
+++ b/RNProject/android/app/src/main/AndroidManifest.xml
@@ -61,6 +61,11 @@
           </intent-filter>
        </activity>
 
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyCMVl7KGxvfuL6nM3E55HMXwEjOy-WLOHo"/>
 
+      <!-- You will also only need to add this uses-library tag -->
+      <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 </manifest>
