--- a/RNProject/ios/RNProject/Info.plist
+++ b/RNProject/ios/RNProject/Info.plist
@@ -36,9 +36,9 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string>Allow your location to serve better results near you.</string>
 	<key>NSFaceIDUsageDescription</key>
-   <string>Enabling Face ID allows you quick and secure access to your account.</string>
+	<string>Enabling Face ID allows you quick and secure access to your account.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Inter-Black.ttf</string>
