--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -51,6 +51,7 @@
       "react-native-gesture-handler": "1.10.*",
       "react-native-keychain": "^8.0.0",
       "react-native-localize": "2.1.*",
+      "react-native-maps": "0.30.1",
       "react-native-modalize": "2.0.*",
       "react-native-modern-datepicker": "^1.0.0-beta.91",
       "react-native-offline": "6.0.*",
