--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -47,6 +47,7 @@
       "react-native": "0.66.*",
       "react-native-app-intro-slider": "4.0.*",
       "react-native-bootsplash": "3.2.*",
+      "react-native-device-info": "8.4.8",
       "react-native-document-picker": "7.1.*",
       "react-native-gesture-handler": "1.10.*",
       "react-native-keychain": "^8.0.0",
