--- a/RNProject/package.json
+++ b/RNProject/package.json
@@ -57,6 +57,7 @@
       "react-native-modern-datepicker": "^1.0.0-beta.91",
       "react-native-offline": "6.0.*",
       "react-native-pager-view": "5.4.*",
+      "react-native-permissions": "3.2.0",
       "react-native-portalize": "1.0.*",
       "react-native-push-notification": "8.1.*",
       "react-native-safe-area-context": "3.3.*",
